--- a/Simple Classification Model with TensorFlow.ipynb
+++ b/Simple Classification Model with TensorFlow.ipynb
@@ -403,7 +403,7 @@
     }
    ],
    "source": [
-    "# Predict to see our friend will like the house \n",
+    "# Predict to see if our friend will like the house \n",
     "sess.run(y,feed_dict={x:inputX})\n"
    ]
   },
